--- a/M03ProgrammingAssignment.ipynb
+++ b/M03ProgrammingAssignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -20,8 +20,7 @@
      "output_type": "stream",
      "text": [
       "item in list: cinderella\n",
-      "item copied from list: Cinderella\n",
-      "item changed in list: Cinderella\n"
+      "updated item in list: Cinderella\n"
      ]
     }
    ],
@@ -30,17 +29,14 @@
     "things = ['mozzarella', 'cinderella', 'salmonella']\n",
     "things[1].capitalize()\n",
     "print('item in list:', things[1])\n",
-    "x = things[1].capitalize()\n",
-    "print('item copied from list:', x)\n",
-    "# the item in the list remains unchanged\n",
-    "things[1] = x\n",
-    "print('item changed in list:', things[1])\n",
-    "# unless the question meant to assign it (it was not entirely clear if it did), in which case it does change"
+    "# the string itself may be immutable, but the element can be changed in the list\n",
+    "things[1] = things[1].capitalize()\n",
+    "print('updated item in list:', things[1])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,8 +44,7 @@
      "output_type": "stream",
      "text": [
       "item in list: mozzarella\n",
-      "item copied from list: MOZZARELLA\n",
-      "item changed in list: MOZZARELLA\n"
+      "updated item in list: MOZZARELLA\n"
      ]
     }
    ],
@@ -58,18 +53,14 @@
     "things = ['mozzarella', 'cinderella', 'salmonella']\n",
     "things[0].upper()\n",
     "print('item in list:', things[0])\n",
-    "x = things[0].upper()\n",
-    "print('item copied from list:', x)\n",
-    "# the item in the list remains unchanged\n",
-    "things[0] = x\n",
-    "print('item changed in list:', things[0])\n",
-    "# unless the question meant to assign it (it was not entirely clear if it did), in which case it does change\n",
-    "# same as 7.5 answer, really not clear on whether or not it wants me to assign the value to the item or just try the function on it"
+    "# the string itself may be immutable, but the element can be changed in the list\n",
+    "things[0] = things[0].upper()\n",
+    "print('updated item in list:', things[0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
